--- a/gb/20/7/7/n12238850.md
+++ b/gb/20/7/7/n12238850.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dindav3580/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dindav3580/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dindav3580/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dindav3580/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dindav3580/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dindav3580/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dindav3580/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dindav3580/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dindav3580/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dindav3580/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dindav3580/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dindav3580/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dindav3580/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dindav3580/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dindav3580/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dindav3580/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/dindav3580/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dindav3580/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/dindav3580/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dindav3580/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dindav3580/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dindav3580/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dindav3580/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dindav3580/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>批国军训练为表演 吴怡农：汉光演习是最大场</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年07月07日讯】（大纪元记者吴旻洲台湾台北报导）<ahref="https://github.com/dindav3580/djy/blob/master/gb/tag/%E6%B5%B7%E5%86%9B%E9%99%86%E6%88%98%E9%98%9F.md#1">海军陆战队</a>操演发生胶艇翻覆意外，造成2死1伤。民进党新境界文教基金会副执行长<ahref="https://github.com/dindav3580/djy/blob/master/gb/tag/%E5%90%B4%E6%80%A1%E5%86%9C.md#1">吴怡农</a>批评，国军训练长久以来多为“表演需求”，而“<ahref="https://github.com/dindav3580/djy/blob/master/gb/tag/%E6%B1%89%E5%85%89%E6%BC%94%E4%B9%A0.md#1">汉光演习</a>就是每年最大场的表演”；海军回应，陆战队特性不同，尊重<ahref="https://github.com/dindav3580/djy/blob/master/gb/tag/%E5%90%B4%E6%80%A1%E5%86%9C.md#1">吴怡农</a>的见解；总统<ahref="https://github.com/dindav3580/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>则表示，吴怡农的说法不尽公平。</p>
-<figure id="attachment_12238852" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/c29ac0cc7ffc2bc4574e2dfd6c06e260.jpg"><img class="wp-image-12238852" src="https://i.epochtimes.com/assets/uploads/2020/07/c29ac0cc7ffc2bc4574e2dfd6c06e260-600x400.jpg" alt="" width="500" b="333" /></a><figcaption class="wp-caption-text">汉光预演发生<ahref="https://github.com/dindav3580/djy/blob/master/gb/tag/%E6%B5%B7%E5%86%9B%E9%99%86%E6%88%98%E9%98%9F.md#1">海军陆战队</a>翻舟意外，新境界文教基金会副执行长吴怡农（右）在脸书撰文质疑<ahref="https://github.com/dindav3580/djy/blob/master/gb/tag/%E6%B1%89%E5%85%89%E6%BC%94%E4%B9%A0.md#1">汉光演习</a>是“表演”，引发争议。吴怡农7日下午接受媒体联访，亲自对外界说明。（中央社）</figcaption></figure>
+<p>【大纪元2020年07月07日讯】（大纪元记者吴旻洲台湾台北报导）<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B5%B7%E5%86%9B%E9%99%86%E6%88%98%E9%98%9F.md#1">海军陆战队</a>操演发生胶艇翻覆意外，造成2死1伤。民进党新境界文教基金会副执行长<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%90%B4%E6%80%A1%E5%86%9C.md#1">吴怡农</a>批评，国军训练长久以来多为“表演需求”，而“<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B1%89%E5%85%89%E6%BC%94%E4%B9%A0.md#1">汉光演习</a>就是每年最大场的表演”；海军回应，陆战队特性不同，尊重<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%90%B4%E6%80%A1%E5%86%9C.md#1">吴怡农</a>的见解；总统<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>则表示，吴怡农的说法不尽公平。</p>
+<figure id="attachment_12238852" aria-describedby="caption-attachment-12238852" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/c29ac0cc7ffc2bc4574e2dfd6c06e260.jpg"><img class="wp-image-12238852" src="https://i.epochtimes.com/assets/uploads/2020/07/c29ac0cc7ffc2bc4574e2dfd6c06e260-600x400.jpg" alt="" width="500" b="333" /></a><figcaption id="caption-attachment-12238852" class="wp-caption-text">汉光预演发生<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B5%B7%E5%86%9B%E9%99%86%E6%88%98%E9%98%9F.md#1">海军陆战队</a>翻舟意外，新境界文教基金会副执行长吴怡农（右）在脸书撰文质疑<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B1%89%E5%85%89%E6%BC%94%E4%B9%A0.md#1">汉光演习</a>是“表演”，引发争议。吴怡农7日下午接受媒体联访，亲自对外界说明。（中央社）</figcaption></figure>
 <p>吴怡农表示，实施演训就会有风险，训练更应该符合现实需求，而不应该冒无谓的风险。国军首要任务是防卫台湾，为何陆战队操演联合登陆作战、要登陆去哪？质疑预想任务中，无论夺回外岛的归复作战、模拟敌军的登陆作战是否合理，更该专注在确保每艘试图接近台湾的共军舰无法登陆。</p>
 <p>吴怡农说，国军训练长期以来多为“表演需求”，且每年最大场表演就是“汉光演习”，与国家防卫作战恐面临的真实情境落差大，“只要顺利完成表演（画面好看），就算是达成任务”。如果操演持续为作秀而无实际国防用途，训练与装备“就不可能完全到位”，有不少离开国防部的退役将领都曾坦白提醒决定国防政策者、美军观察团的检讨报告也都点出这个“坏习惯”，但至今尚未看到真正改变。</p>
-<h2><ahref="https://github.com/dindav3580/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>：吴怡农说法不尽公平</h2>
+<h2><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>：吴怡农说法不尽公平</h2>
 <p>对此，海军参谋长敖以智回应，陆战队的特性不同，他尊重吴怡农的见解，但台湾防卫作战，许多外离岛遭受威胁时，须实施增援、应援和规复作战。若本岛防卫作战，遭遇陆上交通设施被破坏情形，需要空中、海上跨区增援，陆战队任务特性和训练与两栖基本能力不会退让。</p>
 <p>总统蔡英文也表示，吴怡农的说法不尽公平，国军这几年，不论是演习规模或规划也好，都精进非常多，而汉光演习也是国军演训的一部分。她说，此时此刻台湾都应该要替国军加油，因为国军是保家卫国最重要的一个力量。</p>
 <p>对于“作秀说”引发国军不满，吴怡农回应，他与其他人出发点一样，希望国军可以更好，且珍惜全体军人付出，希望有更充足的人力资源、训练、个人装备等，让国军可以更好地完成任务，顾好这个家。◇</p>
@@ -19,42 +19,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/6/21/n12201667.md#1">陈其迈竞选团队 邀吴怡农助阵</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/6/30/n12220978.md#1">国军汉光演习将至 F-16挂弹 潜舰射鱼雷轰敌</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/3/n12229282.md#1">汉光预演 陆战队胶筏惊传翻覆 1失踪2急救</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/3/n12229524.md#1">海陆操演小艇翻覆3人送医 蔡英文：倾全力抢救</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/3/n12230527.md#1">台海军陆战队操演胶舟翻覆 3人装叶克膜急救</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/7/n12238888.md#1">陆委会正告港共政府：不要逾越界限</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/7/n12238890.md#1">蔡英文：如港国安法造成伤害 “会考虑反制措施”</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/7/n12238896.md#1">批港国安法荒谬 台立委：中共心虚</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/7/n12238900.md#1">华航减薪减班计划7月提前喊卡 7/16起恢复正常给薪</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/7/n12238902.md#1">“港国安法”犯众怒 游锡堃：中共政权路越走越小</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/6/21/n12201667.md#1">陈其迈竞选团队 邀吴怡农助阵</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/6/30/n12220978.md#1">国军汉光演习将至 F-16挂弹 潜舰射鱼雷轰敌</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/3/n12229282.md#1">汉光预演 陆战队胶筏惊传翻覆 1失踪2急救</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/3/n12229524.md#1">海陆操演小艇翻覆3人送医 蔡英文：倾全力抢救</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/3/n12230527.md#1">台海军陆战队操演胶舟翻覆 3人装叶克膜急救</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753448.md#1">朱立伦：国民党是亲美政党 续抗共产主义</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753443.md#1">强化联兵营侦搜 台陆军50套无人机将交装</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753457.md#1">儿童染疫莫慌张 使用退烧药、多喝水</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753455.md#1">学校停课冲击大 立委盼政府纾困团膳业</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753465.md#1">孕妇服瑞德西韦 台首证实影响胎儿</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/3/n9919603.md#1" target="_blank">王江火：“抗美援朝”不具备正义性</a></li><li><a href="https://github.com/dindav3580/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/5/n9927251.md#1" target="_blank">澄清长江日报诽谤文章 武汉退休干部的故事</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9783517.md#1" target="_blank">林辉：刚正不阿包青天  中共歪批其虚伪</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">见证大法超常 屏东法轮功学员在法中熔炼</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/6/n12236624.md#1">水灾 中共红会20天募2千 “人民觉醒了”</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/6/n12235421.md#1">大陆洪涝灾情严重 至少26省市1770万人受灾</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/5/n12234416.md#1">闭关锁国？中共称“经济内循环”引热议</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/5/n12233438.md#1">【翻墙必看】北京卫戍区密件泄军方秘密</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/6/n12235718.md#1">英将制裁数十侵犯人权者 冻结财产禁入境</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/5/n12233623.md#1">美国巨星麦可杰克森转生到湖北工地？</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/5/n12234872.md#1">TVB祭加辣条款 郑敬基：前所未有的白色恐怖</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/5/n12234607.md#1">偶像剧导演杨冠玉骤逝 林依晨等艺人悼念</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/6/n12236320.md#1">60岁杨贵媚晕眩发作 坐轮椅就医检查</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/6/n12236838.md#1">浙江卫视高管爆巨额受贿 周冬雨受牵连挨轰</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/6/n12237076.md#1">强制五个孩子戒“网瘾” 结果震惊妈妈</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/6/29/n12220541.md#1">【佳人传】最像林黛玉的江南才女叶小鸾</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/5/26/n12138633.md#1">【康熙大帝】北疆拒俄 永戍龙兴之地</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/7/5/n12233957.md#1">人在做天在看 谋财害命雷公怒</a></li>
-<li><a href="https://github.com/dindav3580/djy/blob/master/gb/20/6/30/n12221096.md#1">断舍离</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dindav3580/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dindav3580/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/7/n12238850.htm">批国军训练为表演 吴怡农：汉光演习是最大场</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/7/n12238850.htm">批国军训练为表演 吴怡农：汉光演习是最大场</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dindav3580/djy/blob/master/gb/20/7/7/n12238850.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dindav3580/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dindav3580/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dindav3580/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dindav3580/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dindav3580/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/7/7/n12238850.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
